# transitfeedhub-ingestor

./: 404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: download_datafortests.py  test_Entity.py  test_VehiclePostionFeed.py  test_carriage.py  test_foo.py
tests/mockapi_data/: VehiclePositions_2025-05-02 01:10:04.440700.pb  VehiclePositions_2025-05-02 01:10:34.573896.pb  VehiclePositions_2025-05-02 01:11:04.656731.pb  VehiclePositions_2025-05-02 01:11:34.775072.pb  VehiclePositions_2025-05-02 01:12:04.918974.pb  VehiclePositions_2025-05-02 01:12:34.993086.pb  VehiclePositions_2025-05-02 01:13:05.195759.pb  VehiclePositions_2025-05-02 01:13:35.330792.pb  VehiclePositions_2025-05-02 01:14:05.409325.pb  VehiclePositions_2025-05-02 01:14:35.574482.pb  VehiclePositions_2025-05-02 01:15:05.700790.pb  VehiclePositions_2025-05-02 01:15:35.785160.pb  VehiclePositions_2025-05-02 01:16:05.965346.pb  VehiclePositions_2025-05-02 01:16:36.070210.pb  VehiclePositions_2025-05-02 01:17:06.207449.pb  VehiclePositions_2025-05-02 01:17:36.379693.pb  VehiclePositions_2025-05-02 01:18:06.512082.pb  VehiclePositions_2025-05-02 01:18:36.679491.pb  VehiclePositions_2025-05-02 01:19:06.815019.pb  VehiclePositions_2025-05-02 01:19:36.972475.pb  VehiclePositions_2025-05-02 01:20:07.107429.pb  VehiclePositions_2025-05-02 01:20:37.334589.pb  VehiclePositions_2025-05-02 01:21:07.414754.pb  VehiclePositions_2025-05-02 01:21:37.520334.pb  VehiclePositions_2025-05-02 01:22:07.663845.pb  VehiclePositions_2025-05-02 01:22:37.779249.pb  VehiclePositions_2025-05-02 01:23:07.946347.pb  VehiclePositions_2025-05-02 01:23:38.081218.pb  VehiclePositions_2025-05-02 01:24:08.156818.pb  VehiclePositions_2025-05-02 01:24:38.289177.pb  VehiclePositions_2025-05-02 01:25:08.382400.pb  VehiclePositions_2025-05-02 01:25:38.557776.pb  VehiclePositions_2025-05-02 01:26:08.637804.pb  VehiclePositions_2025-05-02 01:26:38.773818.pb  (+139 more)
transitfeedhub_ingestor/: main.py
(+8 files in other folders)
